--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,1 +1,61 @@
-<h3> Cart </h3>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %} Cart {% endblock %}
+
+{% block content %}
+	
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="box-element">
+				<a href="{% url 'store' %}" class="btn btn-outline-dark">&#x2190; Continue Shopping</a>
+				<br><br>
+
+				<table class="table">
+					<tr>
+						<th><h5> Items: <strong>3</strong></h5></th>
+						<th><h5> Total: <strong>$43</strong></h5></th>
+						<th>
+							<a href="{% url 'checkout' %}" class="btn btn-success" style="float: right; margin: 5px;"> Checkout
+							</a>
+						</th>
+					</tr>
+				</table>
+			</div>
+		</div>
+
+		<br>
+
+		<div class="col-lg-12">
+			<div class="box-element">
+				<div class="cart-row">
+					<div style="flex: 2;"></div>
+					<div style="flex: 2;"><strong>Item</strong></div>
+					<div style="flex: 1;"><strong>Price</strong></div>
+					<div style="flex: 1;"><strong>Quantity</strong></div>
+					<div style="flex: 1;"><strong>Total</strong></div>
+				</div>
+
+				<div class="cart-row">
+					<div style="flex: 2;">
+						<img src="{% static 'img/640x360.png' %}" class="row-image" style="border: 1px solid gray;">
+					</div>
+					<div style="flex: 2;">Product 1</div>
+					<div style="flex: 1;">$20</div>
+					<div style="flex: 1;">
+						<p class="quantity">2</p>
+						<div class="quantity">
+							<img src="{% static 'img/arrow_up.png'%}" class="chg-quantity">
+
+							<img src="{% static 'img/arrow_down.png'%}" class="chg-quantity">
+						</div>
+					</div>
+					<div style="flex: 1;">$40</div>
+				</div>
+
+			</div>
+		</div>
+		
+	</div>
+
+{% endblock %}
