--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,1 +1,78 @@
-<h3> Checkout </h3>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %} Checkout {% endblock %}
+
+{% block content %}
+	
+<div class="row">
+	<div class="col-lg-6">
+		<div class="box-element" id="form-wrapper">
+			<form id="form">
+				<div id="user-info">
+					<div class="form-field">
+						<input type="text" class="form-control" name="name" placeholder="Name.." required>
+					</div>
+
+					<div class="form-field">
+						<input type="email" class="form-control" name="email" placeholder="Email.." required>
+					</div>
+				</div>
+
+				<div id="shipping-info">
+					<hr>
+					<p>Shipping Information:</p>
+						<hr>
+						<div class="form-field">
+							<input class="form-control" type="text" name="address" placeholder="Address..">
+						</div>
+						<div class="form-field">
+							<input class="form-control" type="text" name="city" placeholder="City..">
+						</div>
+						<div class="form-field">
+							<input class="form-control" type="text" name="state" placeholder="State..">
+						</div>
+						<div class="form-field">
+							<input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
+						</div>
+						<div class="form-field">
+							<input class="form-control" type="text" name="country" placeholder="Country..">
+						</div>
+				</div>
+
+				<hr>
+				<input id="form-button" type="submit" value="Continue" class="btn btn-success btn-block">
+			</form>
+		</div>
+
+		<br>
+
+		<div class="box-element hidden" id="payment-info">
+			<small>Paypal Options</small>
+		</div>
+
+	</div>
+
+	<div class="col-lg-6">
+		<div class="box-element">
+			<a href="{% url 'cart' %}" class="btn btn-outline-dark">&#x2190; Back to cart</a>
+			<hr>
+			<h3>Order summary</h3>
+			<hr>
+
+			<div class="cart-row">
+				<div style="flex: 2;">
+					<img src="{% static 'img/640x360.png' %}" class="row-image" style="border: 1px solid gray;">
+				</div>
+				<div style="flex: 2;"><p>Product</p></div>
+				<div style="flex: 1;"><p>$20</p></div>
+				<div style="flex: 1;"><p>x2</p></div>
+			</div>
+
+			<h5>Items: 2</h5>
+			<h5>Total: $40</h5>
+		</div>
+	</div>
+</div>
+
+{% endblock %}
