--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Store {% endblock %}
+{% block title %} Онлайн магазин {% endblock %}
 
 {% block content %}
 	
@@ -17,8 +17,9 @@
 					<div class="box-element product">
 						<h6><strong> {{ product.name }} </strong></h6>
 						<hr>
-						<button class="btn btn-outline-secondary add-btn">Add to cart</button>
-						<a href="#" class="btn btn-outline-success"> View </a>
+						<button data-product={{product.id}} data-action="add"
+						class="btn btn-outline-secondary add-btn update-cart">Добавить в корзину</button>
+						<a href="#" class="btn btn-outline-success"> Смотреть </a>
 						<h4 style="display: inline-block; float: right;"> ${{ product.price|floatformat:2 }} </h4>
 					</div>
 				</div>
