--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -2,10 +2,32 @@
 {% load static %}
 <html>
 <head>
+  <meta charset="UTF-8">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	<title>{% block title %} {% endblock %}</title>
+
+  <script type="text/javascript">
+      var user = '{{request.user}}'
+
+    function getToken(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    var csrftoken = getToken('csrftoken')
+  </script>
 </head>
 <body>
 
@@ -19,20 +41,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'store' %}">Home</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'store' %}">Главная</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'cart' %}">Cart</a>
+          <a class="nav-link" href="{% url 'cart' %}">Корзина</a>
         </li>
       </ul>
 
-      <a href="/admin" class="btn btn-warning">Login</a>
+      <a href="/admin" class="btn btn-warning">Войти</a>
 
       <a href="{% url 'cart' %}">
       	<img src="{% static 'img/cart-icon.png' %}" id="cart-icon">
       </a>
-      <p id="cart-total"> 0 </p>
+      {% load store_tags %}
+      <p id="cart-total"> {% get_items_in_cart request=request %} </p>
 
     </div>
   </div>
@@ -52,5 +75,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+
 </body>
 </html>
