--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,22 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Cart {% endblock %}
+{% block title %} Корзина {% endblock %}
 
 {% block content %}
 	
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="box-element">
-				<a href="{% url 'store' %}" class="btn btn-outline-dark">&#x2190; Continue Shopping</a>
+				<a href="{% url 'store' %}" class="btn btn-outline-dark">&#x2190; Продолжить покупки</a>
 				<br><br>
 
 				<table class="table">
 					<tr>
-						<th><h5> Items: <strong>3</strong></h5></th>
-						<th><h5> Total: <strong>$43</strong></h5></th>
+						<th><h5> Предметы: <strong>{{ order.get_cart_items }}</strong></h5></th>
+						<th><h5> Итого: <strong>${{ order.get_cart_total|floatformat:2 }}</strong></h5></th>
 						<th>
-							<a href="{% url 'checkout' %}" class="btn btn-success" style="float: right; margin: 5px;"> Checkout
+							<a href="{% url 'checkout' %}" class="btn btn-success" style="float: right; margin: 5px;"> Оформить заказ
 							</a>
 						</th>
 					</tr>
@@ -30,28 +30,37 @@
 			<div class="box-element">
 				<div class="cart-row">
 					<div style="flex: 2;"></div>
-					<div style="flex: 2;"><strong>Item</strong></div>
-					<div style="flex: 1;"><strong>Price</strong></div>
-					<div style="flex: 1;"><strong>Quantity</strong></div>
-					<div style="flex: 1;"><strong>Total</strong></div>
+					<div style="flex: 2;"><strong>Предмет</strong></div>
+					<div style="flex: 1;"><strong>Цена</strong></div>
+					<div style="flex: 1;"><strong>Количество</strong></div>
+					<div style="flex: 1;"><strong>Итого</strong></div>
 				</div>
 
-				<div class="cart-row">
-					<div style="flex: 2;">
-						<img src="{% static 'img/640x360.png' %}" class="row-image" style="border: 1px solid gray;">
-					</div>
-					<div style="flex: 2;">Product 1</div>
-					<div style="flex: 1;">$20</div>
-					<div style="flex: 1;">
-						<p class="quantity">2</p>
-						<div class="quantity">
-							<img src="{% static 'img/arrow_up.png'%}" class="chg-quantity">
 
-							<img src="{% static 'img/arrow_down.png'%}" class="chg-quantity">
+				{% for item in items %}
+					<div class="cart-row">
+						<div style="flex: 2;">
+							{% if item.product.imageURL %}
+								<img src="{{ item.product.imageURL }}" class="row-image" style="border: 1px solid gray;">
+							{% else %}
+								<img src="{% static 'img/no-image-found.png' %}" class="row-image" style="border: 1px solid gray;">
+							{% endif %}
 						</div>
+						<div style="flex: 2;">{{item.product.name}}</div>
+						<div style="flex: 1;">${{item.product.price|floatformat:2}}</div>
+						<div style="flex: 1;">
+							<p class="quantity">{{item.quantity}}</p>
+							<div class="quantity">
+								<img src="{% static 'img/arrow_up.png'%}" class="chg-quantity update-cart"
+								data-product={{item.product.id}} data-action="add">
+
+								<img src="{% static 'img/arrow_down.png'%}" class="chg-quantity update-cart"
+								data-product={{item.product.id}} data-action="remove">
+							</div>
+						</div>
+						<div style="flex: 1;">${{item.get_total}}</div>
 					</div>
-					<div style="flex: 1;">$40</div>
-				</div>
+				{% endfor %}
 
 			</div>
 		</div>
