Some changes on templates

--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -14,7 +14,7 @@
 				<table class="table">
 					<tr>
 						<th><h5> Предметы: <strong>{{ order.get_cart_items }}</strong></h5></th>
-						<th><h5> Итого: <strong>${{ order.get_cart_total|floatformat:2 }}</strong></h5></th>
+						<th><h5> Итого: <strong>${{ order.get_cart_total }}</strong></h5></th>
 						<th>
 							<a href="{% url 'checkout' %}" class="btn btn-success" style="float: right; margin: 5px;"> Оформить заказ
 							</a>
@@ -47,7 +47,7 @@
 							{% endif %}
 						</div>
 						<div style="flex: 2;">{{item.product.name}}</div>
-						<div style="flex: 1;">${{item.product.price|floatformat:2}}</div>
+						<div style="flex: 1;">${{item.product.price }}</div>
 						<div style="flex: 1;">
 							<p class="quantity">{{item.quantity}}</p>
 							<div class="quantity">
