--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -20,7 +20,7 @@
 						<button data-product={{product.id}} data-action="add"
 						class="btn btn-outline-secondary add-btn update-cart">Добавить в корзину</button>
 						<a href="#" class="btn btn-outline-success"> Смотреть </a>
-						<h4 style="display: inline-block; float: right;"> ${{ product.price|floatformat:2 }} </h4>
+						<h4 style="display: inline-block; float: right;"> ${{ product.price }} </h4>
 					</div>
 				</div>
 			{% endif %}
