--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -6,6 +6,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
 	<title>{% block title %} {% endblock %}</title>
 
   <script type="text/javascript">
@@ -26,7 +27,31 @@
         }
         return cookieValue;
     }
-    var csrftoken = getToken('csrftoken')
+    var csrftoken = getToken('csrftoken');
+
+    function getCookie(name) {
+      var cookieArr = document.cookie.split(";");
+
+      for (var i = 0; i < cookieArr.length; i++) {
+        var cookiePair = cookieArr[i].split("=");
+
+        if (name == cookiePair[0].trim()) {
+          return decodeURIComponent(cookiePair[1]);
+        }
+      }
+      return null;
+    }
+
+    var cart = JSON.parse(getCookie("cart"));
+
+    if(cart == undefined) {
+      cart = {}
+      console.log("Cart was created");
+      document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/"
+    }
+
+    console.log("Cart:", cart)
+
   </script>
 </head>
 <body>
