--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -8,7 +8,9 @@
 <div class="row">
 	<div class="col-lg-6">
 		<div class="box-element" id="form-wrapper">
+
 			<form id="form">
+				{% csrf_token %}
 				<div id="user-info">
 					<div class="form-field">
 						<input type="text" class="form-control" name="name" placeholder="Имя.." required>
@@ -29,26 +31,28 @@
 						<div class="form-field">
 							<input class="form-control" type="text" name="city" placeholder="Город..">
 						</div>
-						<div class="form-field">
+						<!-- <div class="form-field">
 							<input class="form-control" type="text" name="state" placeholder="Штат..">
-						</div>
+						</div> -->
 						<div class="form-field">
 							<input class="form-control" type="text" name="zipcode" placeholder="Почтовый индекс..">
 						</div>
-						<div class="form-field">
+						<!-- <div class="form-field">
 							<input class="form-control" type="text" name="country" placeholder="Страна..">
-						</div>
+						</div> -->
 				</div>
 
 				<hr>
 				<input id="form-button" type="submit" value="Продолжить" class="btn btn-success btn-block">
 			</form>
+
 		</div>
 
 		<br>
-
+		<!-- Payment -->
 		<div class="box-element hidden" id="payment-info">
-			<small>Опции Paypal</small>
+			<p><small>Опции Paypal</small></p>
+			<button id="make-payment" class="btn btn-success"> Оплатить </button>
 		</div>
 
 	</div>
@@ -71,15 +75,81 @@
 						{% endif %}
 					</div>
 					<div style="flex: 2;"><p>{{ item.product.name }}</p></div>
-					<div style="flex: 1;"><p>${{ item.product.price|floatformat:2 }}</p></div>
+					<div style="flex: 1;"><p>${{ item.product.price }}</p></div>
 					<div style="flex: 1;"><p>x{{ item.quantity }}</p></div>
 				</div>
 			{% endfor %}
 
 			<h5>Предметы: {{ order.get_cart_items }}</h5>
-			<h5>Итого: ${{ order.get_cart_total|floatformat:2 }}</h5>
+			<h5>Итого: ${{ order.get_cart_total }}</h5>
 		</div>
 	</div>
 </div>
+
+	<!-- JavaScript -->
+
+<script type="text/javascript">
+	var form = document.getElementById("form")
+
+	if(user != "AnonymousUser") {
+		document.getElementById('user-info').innerHTML = ''
+	}
+
+	var total = '{{ order.get_cart_total }}'
+
+	form.addEventListener('submit', function(e){
+		e.preventDefault()
+		console.log("Form submitted")
+		document.getElementById('form-button').classList.add("hidden")
+		document.getElementById('payment-info').classList.remove("hidden")
+		})
+
+	document.getElementById("make-payment").addEventListener('click', function(e){
+		submitFormData()
+	})
+
+	function submitFormData() {
+		console.log("Submit button clicked")
+
+		var userFormData = {
+			"name": null,
+			"email": null,
+			"total": total
+		}
+
+		var shippingInfo = {
+			"address": null,
+			"zipcode": null,
+			"city": null
+		}
+
+		shippingInfo.address = form.address.value
+		shippingInfo.zipcode = form.zipcode.value
+		shippingInfo.city = form.city.value
+
+		if(user == "AnonymousUser"){
+			userFormData.name = form.name.value
+			userFormData.email = form.email.value
+		}
+
+		var url = "/process_order/"
+
+		fetch(url, {
+			method:"POST",
+			headers: {
+				'Content-Type':"application/json",
+				"X-CSRFToken": csrftoken,
+			},
+			body: JSON.stringify({"form":userFormData, "shipping": shippingInfo})
+		})
+		.then((response) => response.json())
+		.then((data) => {
+			console.log("Success:", data);
+			alert("Transaction complete");
+			window.location.href = "{% url 'store' %}"
+		})
+	}
+	
+</script>
 
 {% endblock %}
