--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -59,22 +59,34 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'store' %}">Ecommerce</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Ecommerce</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'store' %}">Главная</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" href="{% url 'cart' %}">Корзина</a>
         </li>
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Войти</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
+          </li>
+        {% endif %}
       </ul>
 
-      <a href="/admin" class="btn btn-warning">Войти</a>
+      <a href="/admin" class="btn btn-warning">Admin</a>
 
       <a href="{% url 'cart' %}">
       	<img src="{% static 'img/cart-icon.png' %}" id="cart-icon">
