--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -8,7 +8,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="box-element">
-				<a href="{% url 'store' %}" class="btn btn-outline-dark">&#x2190; Продолжить покупки</a>
+				<a href="{% url 'home' %}" class="btn btn-outline-dark">&#x2190; Продолжить покупки</a>
 				<br><br>
 
 				<table class="table">
