--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -146,7 +146,7 @@
 		.then((data) => {
 			console.log("Success:", data);
 			alert("Transaction complete");
-			window.location.href = "{% url 'store' %}"
+			window.location.href = "{% url 'home' %}"
 		})
 	}
 	
