Changes in settings and some minor changes

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -24,22 +24,19 @@
 				<div id="shipping-info">
 					<hr>
 					<p>Информация о доставке:</p>
-						<hr>
-						<div class="form-field">
-							<input class="form-control" type="text" name="address" placeholder="Адрес..">
-						</div>
-						<div class="form-field">
-							<input class="form-control" type="text" name="city" placeholder="Город..">
-						</div>
-						<!-- <div class="form-field">
-							<input class="form-control" type="text" name="state" placeholder="Штат..">
-						</div> -->
-						<div class="form-field">
-							<input class="form-control" type="text" name="zipcode" placeholder="Почтовый индекс..">
-						</div>
-						<!-- <div class="form-field">
-							<input class="form-control" type="text" name="country" placeholder="Страна..">
-						</div> -->
+					<hr>
+					<div class="form-field">
+						<input class="form-control" type="text" name="address" placeholder="Адрес.." required>
+					</div>
+					<div class="form-field">
+						<input class="form-control" type="text" name="city" placeholder="Город.." required>
+					</div>
+					<div class="form-field">
+						<input class="form-control" type="text" name="zipcode" placeholder="Почтовый индекс.." required>
+					</div>
+					<div style="margin: 20px 0px;"> Адрес по умолчанию:
+						<input type="checkbox" name="default_address">
+					</div>
 				</div>
 
 				<hr>
@@ -120,12 +117,14 @@
 		var shippingInfo = {
 			"address": null,
 			"zipcode": null,
-			"city": null
+			"city": null,
+			"default_address": False
 		}
 
 		shippingInfo.address = form.address.value
 		shippingInfo.zipcode = form.zipcode.value
 		shippingInfo.city = form.city.value
+		shippingInfo.default_address = form.default_address.value
 
 		if(user == "AnonymousUser"){
 			userFormData.name = form.name.value
