--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -83,8 +83,10 @@
           </li>
         {% endif %}
       </ul>
-
-      <a href="/admin" class="btn btn-warning">Admin</a>
+      
+      {% if user.is_staff %}
+        <a href="/admin" class="btn btn-warning">Admin</a>
+      {% endif %}
 
       <a href="{% url 'cart' %}">
       	<img src="{% static 'img/cart-icon.png' %}" id="cart-icon">
