--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Registration {% endblock %}
+{% block title %} Регистрация {% endblock %}
 
 {% load static %}
 
@@ -8,14 +8,17 @@
 
 {% block content %}
 	<div class="features">
-		<h1> Registration </h1>
+		<h1> Регистрация </h1>
 
 		<form method="POST" class="form-group">
 			{% csrf_token %}
 			
 			{{ form|crispy }}
 
-			<button type="submit" class="btn btn-success"> Sign up </button>
+			<button type="submit" class="btn btn-success"
+			style="margin-top: 20px;">
+				Зарегистрироваться
+			</button>
 		</form>
 	</div>
 {% endblock %}
