--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-	<link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}">
+	<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}"> -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/temp_style.css' %}">
   <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
 	<title>{% block title %} {% endblock %}</title>
@@ -56,9 +56,9 @@
 </head>
 <body class="body">
   <div class="wrapper">
-{% include 'store/includes/header.html' %}
+{# include 'store/includes/header.html' #}
 <!-- Navbar -->
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'home' %}">Ecommerce</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,7 +99,7 @@
 
     </div>
   </div>
-</nav> -->
+</nav>
 <!-- end navbar -->
 
 
@@ -117,8 +117,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 
 <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/script.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/vendors.min.js' %}"></script>
+<!-- <script type="text/javascript" src="{% static 'js/vendors.min.js' %}"></script> -->
+<!-- <script type="text/javascript" src="{% static 'js/script.min.js' %}"></script> -->
 </div>
 </body>
 </html>
